Seed trafficlight metadata

--- a/материалы/участникам/встречи/встреча-01.md
+++ b/материалы/участникам/встречи/встреча-01.md
@@ -1,3 +1,11 @@
+---
+title: "Встреча 1: Определяем состояние 🧭"
+status: yellow
+owner: "Управляющий сети Александр"
+last_reviewed: "2025-12-15"
+next_review: "2026-03-15"
+---
+
 # Встреча 1: Определяем состояние 🧭
 
 Первая встреча — это вход в марафон. Задача не «что-то успеть», а **увидеть, где я сейчас**.
