--- a/материалы/участникам/встречи/встреча-02.md
+++ b/материалы/участникам/встречи/встреча-02.md
@@ -1,3 +1,11 @@
+---
+title: "Встреча 2: Состояние → методы → неделя эксперимента 🧪"
+status: yellow
+owner: "Управляющий сети Александр"
+last_reviewed: "2025-12-15"
+next_review: "2026-03-15"
+---
+
 # Встреча 2: Состояние → методы → неделя эксперимента 🧪
 
 Вторая встреча — это переход от понимания к действию. Запускаем минимальный эксперимент с базовым набором практик.
