--- a/материалы/участникам/встречи/встреча-03.md
+++ b/материалы/участникам/встречи/встреча-03.md
@@ -1,3 +1,11 @@
+---
+title: "Встреча 3: Минимальное время → рабочий продукт ⏱️➡️📦"
+status: yellow
+owner: "Управляющий сети Александр"
+last_reviewed: "2025-12-15"
+next_review: "2026-03-15"
+---
+
 # Встреча 3: Минимальное время → рабочий продукт ⏱️➡️📦
 
 Третья встреча — это переход от «я делаю слоты» к режиму **«каждый слот оставляет рабочий продукт»** и опора на метод стоп-момента.
