--- a/материалы/участникам/встречи/встреча-04.md
+++ b/материалы/участникам/встречи/встреча-04.md
@@ -1,3 +1,11 @@
+---
+title: "Встреча 4: Результаты → мемы → я как система / Ученик 🧭"
+status: yellow
+owner: "Управляющий сети Александр"
+last_reviewed: "2025-12-15"
+next_review: "2026-03-15"
+---
+
 # Встреча 4: Результаты → мемы → я как система / Ученик 🧭
 
 Четвёртая встреча — это подведение итогов недельного эксперимента и переход на **системный уровень**: «что я делаю», «как я думаю» и «кем я становлюсь».
