--- a/материалы/участникам/минимальные-практики.md
+++ b/материалы/участникам/минимальные-практики.md
@@ -1,3 +1,11 @@
+---
+title: "Минимальный набор практик 🧰"
+status: yellow
+owner: "Управляющий сети Александр"
+last_reviewed: "2025-12-15"
+next_review: "2026-03-15"
+---
+
 # Минимальный набор практик 🧰
 
 По итогам марафона у участника остаётся свой базовый набор практик, с которыми он может продолжать движение самостоятельно.
