--- a/материалы/участникам/понятия.md
+++ b/материалы/участникам/понятия.md
@@ -1,3 +1,11 @@
+---
+title: "Ключевые понятия марафона"
+status: yellow
+owner: "Управляющий сети Александр"
+last_reviewed: "2025-12-15"
+next_review: "2026-03-15"
+---
+
 # Ключевые понятия марафона
 
 Этот документ содержит определения основных терминов и понятий, используемых в марафоне 2.0.
