--- a/материалы/участникам/состояния-и-методы.md
+++ b/материалы/участникам/состояния-и-методы.md
@@ -1,3 +1,11 @@
+---
+title: "Связка «Состояние → Метод недели» 🔗"
+status: yellow
+owner: "Управляющий сети Александр"
+last_reviewed: "2025-12-15"
+next_review: "2026-03-15"
+---
+
 # Связка «Состояние → Метод недели» 🔗
 
 На старте марафона участник определяет своё текущее состояние: **Хаос / Тупик / Поворот**.  
