--- a/материалы/участникам/обзор-марафона.md
+++ b/материалы/участникам/обзор-марафона.md
@@ -1,3 +1,11 @@
+---
+title: "Полное описание Марафона 2.0"
+status: yellow
+owner: "Управляющий сети Александр"
+last_reviewed: "2025-12-15"
+next_review: "2026-03-15"
+---
+
 # Полное описание Марафона 2.0
 
 Этот документ содержит подробное описание структуры, философии и механики марафона саморазвития.
