--- a/материалы/участникам/опросник.md
+++ b/материалы/участникам/опросник.md
@@ -1,3 +1,11 @@
+---
+title: "Опросник: Определение текущего состояния"
+status: yellow
+owner: "Управляющий сети Александр"
+last_reviewed: "2025-12-15"
+next_review: "2026-03-15"
+---
+
 # Опросник: Определение текущего состояния
 
 ## Инструкция
