--- a/материалы/участникам/промт-для-ии-агента.md
+++ b/материалы/участникам/промт-для-ии-агента.md
@@ -1,3 +1,11 @@
+---
+title: "Промт для ИИ-агента диагностики"
+status: yellow
+owner: "Управляющий сети Александр"
+last_reviewed: "2025-12-15"
+next_review: "2026-03-15"
+---
+
 # Промт для ИИ-агента диагностики
 
 Ты — ИИ-агент диагностики состояния участника марафона саморазвития.
