--- a/материалы/участникам/шаблоны/чеклист-стоп-момента.md
+++ b/материалы/участникам/шаблоны/чеклист-стоп-момента.md
@@ -1,3 +1,11 @@
+---
+title: "Шаблон чек-листа стоп-момента"
+status: yellow
+owner: "Управляющий сети Александр"
+last_reviewed: "2025-12-15"
+next_review: "2026-03-15"
+---
+
 # Шаблон чек-листа стоп-момента
 
 Используйте этот шаблон для создания своего личного чек-листа работы со стоп-моментами.
