--- a/материалы/участникам/шаблоны/шаблон-трекера.md
+++ b/материалы/участникам/шаблоны/шаблон-трекера.md
@@ -1,3 +1,11 @@
+---
+title: "Шаблон трекера-помидоро"
+status: yellow
+owner: "Управляющий сети Александр"
+last_reviewed: "2025-12-15"
+next_review: "2026-03-15"
+---
+
 # Шаблон трекера-помидоро
 
 Используйте этот шаблон для учёта своих слотов саморазвития.
